Remove alt text from images.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="(Cloud Image)">
+    <img class="top-cloud" src="images/cloud.png">
     <h1>I'm Samuel.</h1>
     <h3><em>a programmer.</em></h3>
-    <img class="bottom-cloud" src="images/cloud.png" alt="(Cloud Image)">
-    <img src="images/mountain.png" alt="(Mountain Image)">
+    <img class="bottom-cloud" src="images/cloud.png">
+    <img src="images/mountain.png">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-picture" src="images/portrait.jpg" alt="(Profile Picture)">
+      <img class="profile-picture" src="images/portrait.jpg">
       <h2>Hello.</h2>
       <p>I'm a Linux System Administrator and C++ developer who is currently learning Web Development.</p>
     </div>
@@ -27,12 +27,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="tux-img" src="images/tux.png" alt="(Linux Logo)">
+        <img class="tux-img" src="images/tux.png">
         <h3>Linux System Administration</h3>
         <p>I switched my daily workstation to run Linux when I was 12 years old. Since then, I have learned how to run an apache server, create bash and systemd scripts, and manage docker containers.</p>
       </div>
       <div class="skill-row">
-        <img class="cpp-img" src="images/cpp.png" alt="(C++ Logo)">
+        <img class="cpp-img" src="images/cpp.png">
         <h3>C++ Development</h3>
         <p>I began programming in C++ when I was 13 years old. Although I haven't been engaged in any significant project, I have learned how to write desktop applications using Qt, how to draw basic 2d geometric objects with modern OpenGL, and how to use the CMake build system.</p>
       </div>
