--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/samuel-mace-065888199/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/samuelcmace/">LinkedIn</a>
     <a class="footer-link" href="https://github.com/samuelcmace">Github</a>
     <a class="footer-link" href="https://stackexchange.com/users/11804780/sammylandler">Stack Exchange</a>
     <p class="copyright-information">© 2021 Samuel Mace.</p>
