Auto-Format Code Using WebStorm

--- a/travel/march-2022-road-trip/wisconsin/index.html
+++ b/travel/march-2022-road-trip/wisconsin/index.html
@@ -7,80 +7,85 @@
     <title>Discover the States</title>
 </head>
 <body>
-    <div class="content">
-        <header>
-            <h1><a class="styled-link" href="../">Discover the States</a></h1>
-            <p>I hope that you will take this opportunity to discover some of what America has to offer.</p>
-        </header>
-        <div class="sub-content">
-            <div class="tablet-sub-content">
-                <nav>
-                    <ul>
-                        <li><a class="styled-link" href="../michigan/">Michigan</a></li>
-                        <li><a class="styled-link" href="./">Wisconsin</a></li>
-                        <li><a class="styled-link" href="../iowa/">Iowa</a></li>
-                        <li><a class="styled-link" href="../nebraska/">Nebraska</a></li>
-                        <li><a class="styled-link" href="../wyoming/">Wyoming</a></li>
-                        <li><a class="styled-link" href="../utah/">Utah</a></li>
-                        <li><a class="styled-link" href="../nevada/">Nevada</a></li>
-                        <li><a class="styled-link" href="../california/">California</a></li>
-                    </ul>
-                </nav>
-                <main>
-                    <h2>Wisconsin</h2>
-                    <div class="youtube-container">
-                        <iframe src="https://www.youtube-nocookie.com/embed/XTR9JzjLijc" title="Wisconsin" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                </main>
-            </div>
-            <aside>
-                <h3>Wisconsin Facts</h3>
-                <table>
-                    <tr>
-                        <td>Capital City</td>
-                        <td>Madison</td>
-                    </tr>
-                    <tr>
-                        <td>Abbreviation</td>
-                        <td>WI</td>
-                    </tr>
-                    <tr>
-                        <td>Population (2019)</td>
-                        <td>5,742,713 (Rank: 20 of 50)</td>
-                    </tr>
-                    <tr>
-                        <td>Region</td>
-                        <td>Midwest</td>
-                    </tr>
-                    <tr>
-                        <td>Admission to Statehood</td>
-                        <td>May 29, 1848 (30th State)</td>
-                    </tr>
-                    <tr>
-                        <td>State Motto</td>
-                        <td>FORWARD</td>
-                    </tr>
-                    <tr>
-                        <td>State Nickname</td>
-                        <td>Badger State</td>
-                    </tr>
-                    <tr>
-                        <td>Origin of State Name</td>
-                        <td>Based on an Indian word Ouisconsin believed to mean “grassy place”</td>
-                    </tr>
-                    <tr>
-                        <td>Area Codes</td>
-                        <td>262, 414, 608, 715, 920</td>
-                    </tr>
-                </table>
-                <a href="https://www.50states.com/wisconsin.htm">Source: 50states.com</a>
-            </aside>
+<div class="content">
+    <header>
+        <h1><a class="styled-link" href="../">Discover the States</a></h1>
+        <p>I hope that you will take this opportunity to discover some of what America has to offer.</p>
+    </header>
+    <div class="sub-content">
+        <div class="tablet-sub-content">
+            <nav>
+                <ul>
+                    <li><a class="styled-link" href="../michigan/">Michigan</a></li>
+                    <li><a class="styled-link" href="./">Wisconsin</a></li>
+                    <li><a class="styled-link" href="../iowa/">Iowa</a></li>
+                    <li><a class="styled-link" href="../nebraska/">Nebraska</a></li>
+                    <li><a class="styled-link" href="../wyoming/">Wyoming</a></li>
+                    <li><a class="styled-link" href="../utah/">Utah</a></li>
+                    <li><a class="styled-link" href="../nevada/">Nevada</a></li>
+                    <li><a class="styled-link" href="../california/">California</a></li>
+                </ul>
+            </nav>
+            <main>
+                <h2>Wisconsin</h2>
+                <div class="youtube-container">
+                    <iframe src="https://www.youtube-nocookie.com/embed/XTR9JzjLijc" title="Wisconsin"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                </div>
+            </main>
         </div>
-        <footer>
-			<p><a href="../">Return to Landing Page</a></p>
-			<p>Copyright &copy; 2022 - Samuel Mace<p>
-            <p>All content contained from outside sources (such as video background music) is either licensed under creative commons or covered under fair-use and is attributed to the original author where it is used. Any infringement of copyright is unintentional.</p>
-        </footer>
+        <aside>
+            <h3>Wisconsin Facts</h3>
+            <table>
+                <tr>
+                    <td>Capital City</td>
+                    <td>Madison</td>
+                </tr>
+                <tr>
+                    <td>Abbreviation</td>
+                    <td>WI</td>
+                </tr>
+                <tr>
+                    <td>Population (2019)</td>
+                    <td>5,742,713 (Rank: 20 of 50)</td>
+                </tr>
+                <tr>
+                    <td>Region</td>
+                    <td>Midwest</td>
+                </tr>
+                <tr>
+                    <td>Admission to Statehood</td>
+                    <td>May 29, 1848 (30th State)</td>
+                </tr>
+                <tr>
+                    <td>State Motto</td>
+                    <td>FORWARD</td>
+                </tr>
+                <tr>
+                    <td>State Nickname</td>
+                    <td>Badger State</td>
+                </tr>
+                <tr>
+                    <td>Origin of State Name</td>
+                    <td>Based on an Indian word Ouisconsin believed to mean “grassy place”</td>
+                </tr>
+                <tr>
+                    <td>Area Codes</td>
+                    <td>262, 414, 608, 715, 920</td>
+                </tr>
+            </table>
+            <a href="https://www.50states.com/wisconsin.htm">Source: 50states.com</a>
+        </aside>
     </div>
+    <footer>
+        <p><a href="../">Return to Landing Page</a></p>
+        <p>Copyright &copy; 2022 - Samuel Mace
+        <p>
+        <p>All content contained from outside sources (such as video background music) is either licensed under creative
+            commons or covered under fair-use and is attributed to the original author where it is used. Any
+            infringement of copyright is unintentional.</p>
+    </footer>
+</div>
 </body>
 </html>
