--- a/travel/index.html
+++ b/travel/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="refresh" content="0; url='./march-2022-road-trip/'" />
-    </head>
-    <body>
-        <p>If this page did not automatically redirect, you may <a href="./march-2022-road-trip/">click here</a> to manually redirect.</p>
-    </body>
+<head>
+    <meta http-equiv="refresh" content="0; url='./march-2022-road-trip/'"/>
+</head>
+<body>
+<p>If this page did not automatically redirect, you may <a href="./march-2022-road-trip/">click here</a> to manually
+    redirect.</p>
+</body>
 </html>
