Finish Working on Navigation for New Website

--- a/en/index.html
+++ b/en/index.html
@@ -8,6 +8,7 @@
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css"
           integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g=="
           referrerpolicy="no-referrer" rel="stylesheet"/>
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,18 +29,18 @@
                         <a aria-current="page" class="nav-link active" href="./">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about/">About</a>
+                        <a class="nav-link" href="about/">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./portfolio/">Portfolio</a>
+                        <a class="nav-link" href="portfolio/">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contact/">Contact</a>
+                        <a class="nav-link" href="contact/">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link disabled">日本語</a>
+                        <a class="nav-link" href="../ja/">日本語</a>
                     </li>
                 </ul>
             </div>
