--- a/ja/index.html
+++ b/ja/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="utf-8">
@@ -8,6 +8,7 @@
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.2/css/bootstrap.min.css"
           integrity="sha512-CpIKUSyh9QX2+zSdfGP+eWLx23C8Dj9/XmHjZY2uDtfkdLGo0uY12jgcnkX9vXOgYajEKb/jiw67EYm+kBf+6g=="
           referrerpolicy="no-referrer" rel="stylesheet"/>
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link disabled">English</a>
+                        <a class="nav-link" href="../en/">English</a>
                     </li>
                 </ul>
             </div>
