Fix Bug in Navigation on Japanese Version

--- a/ja/contact/index.html
+++ b/ja/contact/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="../about/">について</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./.portfolio/">Portfolio</a>
+                        <a class="nav-link" href="../portfolio/">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a aria-current="page" class="nav-link active" href="./">Contact</a>
