--- a/ja/index.html
+++ b/ja/index.html
@@ -29,13 +29,13 @@
                         <a aria-current="page" class="nav-link active" href="./">ホーム</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./about/">について</a>
+                        <a class="nav-link" href="about/">について</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./portfolio/">Portfolio</a>
+                        <a class="nav-link" href="portfolio/">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contact/">Contact</a>
+                        <a class="nav-link" href="contact/">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
