--- a/travel/index.html
+++ b/travel/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url='./march-2022-road-trip/'"/>
+    <meta content="0; url='./march-2022-road-trip/'" http-equiv="refresh"/>
 </head>
 <body>
 <p>If this page did not automatically redirect, you may <a href="march-2022-road-trip">click here</a> to manually
