Complete Working Copy of Portfolio Website

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="decorative-box navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="../">Samuel Mace</a>
             <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
@@ -46,6 +46,57 @@
             </div>
         </div>
     </nav>
+
+    <main>
+        <header class="decorative-box">
+            <h1>About</h1>
+            <p>Through my experiences both inside and outside the classroom, I have had the opportunity to learn many
+                programming languages and frameworks, as well as create projects with some of them. Listed below are
+                just some of the programming languages that I have been able to work with over the years.</p>
+        </header>
+
+        <section class="decorative-box grid-container-parent">
+
+            <div class="grid-container-child">
+                <h3>General Purpose</h3>
+                <ul>
+                    <li>Java (JavaFX)</li>
+                    <li>C# (WPF)</li>
+                    <li>C++ (Qt)</li>
+                </ul>
+            </div>
+
+            <div class="grid-container-child">
+                <h3>Scripting Languages</h3>
+                <ul>
+                    <li>Bash (Ubuntu)</li>
+                    <li>SQL (TSQL)</li>
+                </ul>
+            </div>
+
+            <div class="grid-container-child">
+                <h3>Backend Web Development</h3>
+                <ul>
+                    <li>ASP.NET (MVC)</li>
+                </ul>
+            </div>
+
+            <div class="grid-container-child">
+                <h3>Frontend Web Development</h3>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript (ES6)</li>
+                    <li>BootStrap (5)</li>
+                </ul>
+            </div>
+
+        </section>
+    </main>
+
+    <footer class="decorative-box">
+        <p>Copyright &copy; 2022 - Samuel Mace</p>
+    </footer>
 
 </div>
 
