--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="decorative-box navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="../">Samuel Mace</a>
             <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
@@ -47,6 +47,24 @@
         </div>
     </nav>
 
+    <main>
+        <header class="decorative-box">
+            <h1>Contact</h1>
+            <p>If you would like to reach out to me, you can contact me on the media outlets listed below.</p>
+        </header>
+
+        <section class="decorative-box">
+            <ul>
+                <li><a href="https://linkedin.com/in/samuelcmace">LinkedIn</a></li>
+                <li><a href="https://github.com/samuelcmace/">Github</a></li>
+                <li><a href="mailto:samuelcmace@gmail.com">Email</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="decorative-box">
+        <p>Copyright &copy; 2022 - Samuel Mace</p>
+    </footer>
 </div>
 
 <script crossorigin="anonymous"
