--- a/en/index.html
+++ b/en/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="decorative-box navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="./">Samuel Mace</a>
             <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
@@ -46,6 +46,26 @@
             </div>
         </div>
     </nav>
+
+    <main>
+        <header class="decorative-box">
+            <h1>Overview</h1>
+        </header>
+
+        <section class="decorative-box">
+            <p>As a homeschool student, I have had the opportunity to study IT and software development as a hobby. With
+                the help of my family, I learned the basics of Linux, C++, and frontend web development.</p>
+
+            <p>In my formal education at Northeast Wisconsin Technical College, I have studied database administration,
+                backend web development, and desktop application development. Going forward, I plan on finishing my
+                Bachelor's Degree at University of Wisconsin, Green Bay.</p>
+        </section>
+
+    </main>
+
+    <footer class="decorative-box">
+        <p>Copyright &copy; 2022 - Samuel Mace</p>
+    </footer>
 
 </div>
 
