--- a/en/portfolio/index.html
+++ b/en/portfolio/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="decorative-box navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="../">Samuel Mace</a>
             <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
@@ -46,6 +46,63 @@
             </div>
         </div>
     </nav>
+
+    <main>
+        <header class="decorative-box">
+            <h1>Portfolio</h1>
+            <p>From my formal education at Northeast Wisconsin Technical College, I have had the opportunity to
+                participate in both solo and group coding projects to <em>apply</em> the skills that I have learned.
+                Listed below are some of the projects that I have worked on.</p>
+        </header>
+
+        <section class="decorative-box">
+            <h2>Understanding the Kanji</h2>
+            <ul>
+                <li><a href="https://github.com/understanding-the-kanji/utk">Source Code</a></li>
+                <li><a href="https://understanding-the-kanji.github.io/">Documentation</a></li>
+            </ul>
+
+            <p>As a final project for my Java class, I decided to create a language learning app to help me study
+                Japanese. One aspect of learning Japanese that many students find difficult is the apparent lack of
+                meaning in the Kanji characters, one of the writing systems used in Japanese. To learn Kanji, I am
+                following <a
+                        href="https://www.amazon.com/Remembering-Kanji-Complete-Japanese-Characters/dp/0824835921">
+                    James Heisig's Remembering the Kanji</a>. The study method used in this curriculum requires the user
+                to take notes on and form stories on the Kanji characters. This app helped me to accomplish this goal,
+                all while learning about Java app development and database connections in Java.</p>
+        </section>
+
+        <section class="decorative-box">
+            <h2>Battleship Project (Group-work)</h2>
+            <ul>
+                <li><a href="https://github.com/c-sharp-battleship/c-sharp-battleship">Source Code</a></li>
+                <li><a href="https://c-sharp-battleship.github.io/">Project Website</a></li>
+            </ul>
+            <p>For my second C# class, I was assigned to a team to work on a recreation of the Battleship board game.
+                Although the project quality was far from perfect, we did end up with a fully-working game in the end
+                (even with experimental features). More importantly, my team learned the importance of good
+                communication in a team setting (specifically design patterns) and the importance of good team
+                collaboration software (such as the git version control system, for example).</p>
+        </section>
+
+        <section class="decorative-box">
+            <h2>Discover the States</h2>
+            <ul>
+                <li>
+                    <a href="https://github.com/samuelcmace/samuelcmace.github.io/tree/main/travel/march-2022-road-trip">Source
+                        Code</a></li>
+                <li><a href="https://samuelcmace.net/travel/march-2022-road-trip/">Live Demo</a></li>
+            </ul>
+            <p>For my final project in my website coding class, I was assigned the task to create a multiple-page
+                website that would incorporate multimedia content. Since at the time, I was piecing together some road
+                trip footage and posting these videos on YouTube, I decided to create a website to showcase these
+                videos.</p>
+        </section>
+    </main>
+
+    <footer class="decorative-box">
+        <p>Copyright &copy; 2022 - Samuel Mace</p>
+    </footer>
 
 </div>
 
