--- a/ja/index.html
+++ b/ja/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="decorative-box navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="./">メース　サムエル</a>
             <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
