Temporarily Remove Japanese Language from Portfolio Website

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -40,7 +40,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../ja/about/">日本語</a>
+                        <a class="nav-link disabled" href="../../ja/about/">日本語 (Coming Soon)</a>
                     </li>
                 </ul>
             </div>
