--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -40,7 +40,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../ja/contact/">日本語</a>
+                        <a class="nav-link disabled" href="../../ja/contact/">日本語 (Coming Soon)</a>
                     </li>
                 </ul>
             </div>
